--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,1 +1,37 @@
+.about{
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+    margin: 80px 170px;
 
+}
+.about-title{
+    position: relative;
+    display: flex;              /* Enables flexbox layout */
+    align-items: center;         /* Vertically aligns items in the center */
+    justify-content: center;     /* Centers content horizontally */
+    gap: 10px;                   /* Adds spacing between the title and the image */
+}
+
+
+.about-title h1 {
+    background: linear-gradient(90deg, #df8908, #b415ff);
+    -webkit-background-clip: text;  /* Clips the background to the text */
+    -webkit-text-fill-color: transparent; /* Makes the text transparent so the gradient shows through */
+    font-size: 4rem;
+}
+.about-right{
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+}
+
+  
+ 
+  
+  
+  
+  
+ 
