--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -18,6 +18,7 @@
 
 .about-title h1 {
     background: linear-gradient(90deg, #df8908, #b415ff);
+    background-clip: text; 
     -webkit-background-clip: text;  /* Clips the background to the text */
     -webkit-text-fill-color: transparent; /* Makes the text transparent so the gradient shows through */
     font-size: 4rem;
