--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -44,6 +44,10 @@
     border: 2px solid #fff;
     cursor: pointer;
 }
+.hero-resume a{
+    text-decoration: none;
+    color: white;
+}
 .hero-connect:hover{
     border: 2px solid #fff ;
 }
